compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__external_fn__no_target_supported_function_fault_tolerance.snap
---
source: compiler-core/src/erlang/tests/external_fn.rs
expression: "\n// This will error for having no support on this platform\n@external(erlang, \"one\", \"two\")\npub fn no_impl() -> Int\n\npub fn main() {\n  // This will due to no_impl not having an appropriate implementation for the\n  // target, NOT because it doesn't exist. The analyser should still know about\n  // it, even though it is invalid.\n  no_impl()\n}\n"
---
error: Unsupported target
  ┌─ /src/one/two.gleam:4:1
  │
4 │ pub fn no_impl() -> Int
  │ ^^^^^^^^^^^^^^^^

The `no_impl` function is public but doesn't have an implementation for
the JavaScript target. All public functions of a package must be able to
compile for a module to be valid.

error: Unsupported target
  ┌─ /src/one/two.gleam:6:1
  │
6 │ pub fn main() {
  │ ^^^^^^^^^^^^^

The `main` function is public but doesn't have an implementation for
the JavaScript target. All public functions of a package must be able to
compile for a module to be valid.

error: Unsupported target
   ┌─ /src/one/two.gleam:10:3
   │
10 │   no_impl()
   │   ^^^^^^^

This value is not available as it is defined using externals, and there is
no implementation for the JavaScript target.

Hint: Did you mean to build for a different target?
