compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__external_fn__unqualified_reference_to_imported_elixir_external_fn.snap
---
source: compiler-core/src/erlang/tests/external_fn.rs
expression: "import my_app.{run}\npub fn main() {\n  let x = run\n  id(run)\n}\nfn id(x) { x }\n"
---
----- SOURCE CODE
import my_app.{run}
pub fn main() {
  let x = run
  id(run)
}
fn id(x) { x }


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec id(K) -> K.
id(X) ->
    X.

-spec main() -> fun(() -> integer()).
main() ->
    X = fun 'Elixir.MyApp':run/0,
    id(fun 'Elixir.MyApp':run/0).
